🎨issue search results alignment careers

--- a/wp/wp-content/themes/alven/css/main.css
+++ b/wp/wp-content/themes/alven/css/main.css
@@ -3654,6 +3654,9 @@ select::-ms-expand {
 .page-template-careers .content-header.has-img {
   padding: 107px 0 25px; }
 
+.page-template-careers .content-header p {
+  display: none; }
+
 .startups-jobs {
   margin: 40px 0 0; }
   .startups-jobs .form-search {
@@ -3737,6 +3740,8 @@ select::-ms-expand {
   border-bottom: 1px solid #e5e8e8;
   align-items: flex-start;
   box-shadow: none; }
+  .job:nth-child(-n + 2) {
+    padding-top: 0; }
   .job:nth-child(odd) {
     margin: 0 20px 0 0; }
   .job > div {
@@ -4091,6 +4096,8 @@ select::-ms-expand {
         flex-basis: calc(50% - 10px); }
         .company-search .related-jobs .related-jobs-links a:nth-child(odd) {
           margin-right: 20px; }
+  .job:nth-child(-n + 2) {
+    padding: 60px 0 25px; }
   .workable-form-application h2 {
     font-size: 4.4rem;
     margin-top: 75px;
@@ -4163,6 +4170,8 @@ select::-ms-expand {
       margin-bottom: 0; }
     .details-job-sidebar .company-info {
       display: none; }
+  .job:nth-child(-n + 2) {
+    padding: 15px 0; }
   .job-details-main-content div {
     width: calc(100% + 20px * 2 + 10px * 2);
     max-height: calc(6rem + 3.6rem);
