--- a/wp/wp-content/themes/alven/scss/pages/_jobs.scss
+++ b/wp/wp-content/themes/alven/scss/pages/_jobs.scss
@@ -37,15 +37,15 @@
     }
 }
 
-.wrapper-collant{
+.wrapper-collant {
     position: relative;
 }
 
-.collant{
+.collant {
     position: fixed !important;
 }
 
-.collant-stuck{
+.collant-stuck {
     position: absolute;
 }
 
@@ -66,6 +66,9 @@
         }
         &.has-img {
             padding: 107px 0 25px;
+        }
+        p {
+            display: none;
         }
     }
 }
@@ -179,6 +182,9 @@
     border-bottom: 1px solid $greyBorder;
     align-items: flex-start;
     box-shadow: none;
+    &:nth-child(-n + 2) {
+        padding-top: 0;
+    }
     &:nth-child(odd) {
         margin: 0 $outerGutter 0 0;
     }
@@ -528,6 +534,11 @@
             }
         }
     }
+    .job {
+        &:nth-child(-n + 2) {
+            padding: 60px 0 25px;
+        }
+    }
     .workable-form-application {
         h2 {
             font-size: 4.4rem;
@@ -626,6 +637,11 @@
         }
         .company-info {
             display: none;
+        }
+    }
+    .job {
+        &:nth-child(-n + 2) {
+            padding: 15px 0;
         }
     }
     .job-details-main-content {
